@@ -87,7 +87,7 @@ public class OpensearchService {
 
         if (filtervalg.harBarnUnder18AarFilter()) {
             if (filtervalg.barnUnder18AarAlder != null && !filtervalg.barnUnder18AarAlder.isEmpty()) {
-                String[] fraTilAlder = filtervalg.barnUnder18AarAlder.get(0).split("-");
+                String[] fraTilAlder = filtervalg.barnUnder18AarAlder.getFirst().split("-");
                 int fraAlder = parseInt(fraTilAlder[0]);
                 int tilAlder = parseInt(fraTilAlder[1]);
                 leggTilBarnAlderFilter(boolQuery, authService.harVeilederTilgangTilKode6(), authService.harVeilederTilgangTilKode7(), fraAlder, tilAlder);
